[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SpawnArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Tombstone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Font/kongtext.ttf" type="DynamicFontData" id=6]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/pumpkin.png-eaff5cebe7c305f05ac9e3c96da19a37.stex"

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/bone-icon.png-54c5556c434fdf36ae3e0ada9f97389d.stex"

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 192 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD"]
margin_right = 304.0
margin_bottom = 16.0

[node name="PumpkinIconContainer" type="MarginContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD/HBoxContainer/PumpkinIconContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 1 )

[node name="SmashedPumpkinsCounterContainer" type="MarginContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="CanvasLayer/HUD/HBoxContainer/SmashedPumpkinsCounterContainer"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "x0"

[node name="BoneIconContainer" type="MarginContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD/HBoxContainer/BoneIconContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 3 )

[node name="BoneCounterContainer" type="MarginContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 60.0
margin_right = 252.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/HUD/HBoxContainer/BoneCounterContainer"]
margin_top = 4.0
margin_right = 192.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
text = "x3"

[node name="VersionLabelContainer" type="MarginContainer" parent="CanvasLayer/HUD/HBoxContainer"]
margin_left = 256.0
margin_right = 304.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="CanvasLayer/HUD/HBoxContainer/VersionLabelContainer"]
margin_top = 4.0
margin_right = 48.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 5 )
text = "v0.1.0"

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -16.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -20.0
margin_right = 80.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverContainer"]
margin_right = 160.0
margin_bottom = 40.0

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 7 )
text = "GAME OVER"
align = 1

[node name="RetryLabel" type="Label" parent="CanvasLayer/GameOverContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 8 )
text = "press SPACE to retry"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 160, 120 )
current = true

[node name="GhostPumpkinSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="GhostPumpkinSpawnAreaLeft" parent="." instance=ExtResource( 4 )]
position = Vector2( -160, 96 )

[node name="GhostPumpkinSpawnAreaRight" parent="." instance=ExtResource( 4 )]
position = Vector2( 480, 96 )

[node name="Tombstone1" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 144 )

[node name="Tombstone2" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 80 )

[node name="Tombstone3" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 144 )

[node name="Tombstone4" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 80 )

[node name="Tombstone5" parent="." instance=ExtResource( 5 )]
position = Vector2( 256, 144 )

[node name="Tombstone6" parent="." instance=ExtResource( 5 )]
position = Vector2( 256, 80 )

[connection signal="collected_bone" from="Player" to="." method="_on_Player_collected_bone"]
[connection signal="timeout" from="GhostPumpkinSpawnTimer" to="." method="_on_GhostPumpkinSpawnTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
